multi-frontend-backend-cloud/kubernetes-istio/backend/java-greeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-greeting-deployment
  labels:
    app: java-greeting-app
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  template:
    metadata:
      name: java-greeting
      labels:
        app: java-greeting-app
    spec:
      containers:
        - name: java-greeting-container
          image: serhiion/java-greeting:2019-08-05
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: java-greeting-app
