multi-frontend-backend-cloud/kubernetes-istio/backend/java-greeting-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeting-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
      - uri:
          exact: "/api"
      - uri:
          prefix: "/api/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: java-greeting-service
